[gd_scene load_steps=23 format=3 uid="uid://ck2ddqlvmipjn"]

[ext_resource type="Script" path="res://scripts/Monster/wizard.gd" id="1_f67a6"]
[ext_resource type="Texture2D" uid="uid://cdykqcalv2eq8" path="res://assets/sprites/wizard/Attack2.png" id="1_r8rd3"]
[ext_resource type="Texture2D" uid="uid://cmvkervqxssc7" path="res://assets/sprites/wizard/Idle.png" id="3_5epis"]
[ext_resource type="PackedScene" uid="uid://c3bkpyr2sp0o5" path="res://scenes/mini_healthbar.tscn" id="5_pv8aj"]
[ext_resource type="PackedScene" uid="uid://c0rba683rq8u2" path="res://scenes/damage_zone.tscn" id="6_h3xio"]
[ext_resource type="PackedScene" uid="uid://b7epa3re458xd" path="res://scenes/damage_audio.tscn" id="7_vvtwr"]
[ext_resource type="AudioStream" uid="uid://csvaie0c53ech" path="res://assets/sounds/slime_death.wav" id="8_f5mr8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_toxer"]
atlas = ExtResource("1_r8rd3")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_afndj"]
atlas = ExtResource("1_r8rd3")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow8rh"]
atlas = ExtResource("1_r8rd3")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp8d4"]
atlas = ExtResource("1_r8rd3")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_niemg"]
atlas = ExtResource("1_r8rd3")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2jgo"]
atlas = ExtResource("3_5epis")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwy76"]
atlas = ExtResource("3_5epis")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_oavpc"]
atlas = ExtResource("3_5epis")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_qktxe"]
atlas = ExtResource("3_5epis")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mvnc"]
atlas = ExtResource("3_5epis")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmy1h"]
atlas = ExtResource("3_5epis")
region = Rect2(1155, 0, 231, 190)

[sub_resource type="SpriteFrames" id="SpriteFrames_16yua"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_toxer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afndj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow8rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp8d4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niemg")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2jgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwy76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oavpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qktxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mvnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmy1h")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ln2nv"]
size = Vector2(14.5, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_dcavm"]
radius = 121.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hgsp"]
size = Vector2(14, 16)

[node name="Wizard" type="CharacterBody2D" groups=["wizard"]]
collision_layer = 4
script = ExtResource("1_f67a6")
speed = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_16yua")
animation = &"attack"
autoplay = "idle"
frame_progress = 0.754549
flip_h = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_ln2nv")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AttackRangeArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeArea2D"]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_dcavm")

[node name="AttackSpeedTimer" type="Timer" parent="."]
one_shot = true

[node name="OnDeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_f5mr8")
volume_db = 24.0
bus = &"SFX"

[node name="DamageAudio" parent="." instance=ExtResource("7_vvtwr")]

[node name="MiniHealthbar" parent="." instance=ExtResource("5_pv8aj")]
offset_top = 15.0
offset_bottom = 20.0

[node name="DamageZone" parent="." instance=ExtResource("6_h3xio")]
collision_layer = 4
collision_mask = 2
damage = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_1hgsp")
debug_color = Color(0.204394, 0.624724, 0.412031, 0.42)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AttackRangeArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AttackRangeArea2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="AttackSpeedTimer" to="." method="_on_timer_timeout"]
